<resources>
    <string name="app_name" translatable="false">MaTeX</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_editor" translatable="false">EditorActivity</string>
    <string name="title_home">Editor</string>
    <string name="title_dashboard">PDF View</string>
    <string name="title_notifications">Configuration</string>
    <string name="document_symbol" translatable="false">Document Symbol</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="delete_question">Delete \"%s\"?</string>
    <string name="delete_question_long">Are you sure you want to delete this Document? This action cannot be undone.</string>
    <string name="create_dialog_create_new">Create new Document</string>
    <string name="create_dialog_enter_title">Enter a title for your Document:</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="subtitle">Subtitle</string>
    <string name="date">Date</string>
    <string name="document_title">Document Title</string>
    <string name="LaTeX_today" translatable="false">\\today</string>

    <string name="margin_mm" translatable="false">"%smm"</string>
    <string name="preference_first_launch" translatable="false">MaTeXFirstLaunchBoolean</string>
    <string name="doc_already_exists">A document with this name already exists!</string>
    <string name="coming_soon">Coming soon …</string>
    <string name="config">Config</string>
    <string name="pdf">PDF</string>
    <string name="text">Text</string>
    <string name="generate_table_of_contents">Generate table of contents</string>
    <string name="table_of_contents">Table of Contents</string>
    <string name="font_size">Font size</string>
    <string name="page_margins">Page Margins</string>
    <string name="top_and_bottom">Top and bottom</string>
    <string name="left_and_right">Left and right</string>
    <string name="use_today">always use today</string>

    <string name="pick_date">Pick Date</string>
    <string name="share">Share</string>
    <string name="share_md_file">MD file</string>
    <string name="share_pdf">PDF</string>
    <string name="dialog_create_pdf_first">Please create a PDF first!</string>
    <string name="image_already_exists">An image with that name already exists.</string>
    <string name="image_name">Image name</string>
    <string name="dialog_create_pdf_first_message">In order to share a PDF file, go to the PDF Tab and create one!</string>
    <string name="error_generate_pdf">Failed to generate PDf. Check for invalid LaTeX syntax or invalid symbols (e.g. Emojis).</string>
    <string name="error_connection">Could not connect to the PDF Server. Make sure you are connected to the internet.</string>
    <string name="share_zip_file">ZIP with MD file and images</string>
    <string name="use_as_link">Use as link?</string>
    <string name="use_s_as_link">Use \'%s\' as Link URL?</string>
    <string name="font_preview">Font Preview</string>
    <string name="font">Font</string>
    <string name="have_link_color">Color links</string>
    <string name="restore_guide">Restore Guide</string>
    <string name="about">About</string>
    <string name="error_context">Error generating pdf. Try again later.</string>
    <string name="menu_main_donate">Buy me a beer</string>
</resources>
