<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_editor_delete"
        android:title="@string/delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_editor_share"
        android:icon="@drawable/ic_share_white"
        android:title="@string/share"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/menu_editor_share_pdf"
                android:title="@string/share_pdf"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_editor_share_md"
                android:title="@string/share_md_file"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_editor_share_zip"
                android:title="@string/share_zip_file"
                app:showAsAction="never" />

        </menu>

    </item>

</menu>